<resources>
    <string name="app_name">Parking App</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Parking App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_polygons">Polygons</string>
    <string name="menu_history">History</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="nav_msg_others">Other</string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">This app uses your location.</string>
    <string name="foreground_service_title">Parking</string>
    <string name="foreground_service_msg">You are parking</string>
    <string name="channel_name">waiting_channel</string>
    <string name="channel_description">It is calculating parking cost</string>
    <string name="notif_status_waiting">Waiting...</string>
    <string name="notif_status_not_in_polygon">Not in polygon</string>
    <string name="notif_titile_no_polygon">None</string>
    <string name="notif_title_polygon">Polygon %s</string>
    <string name="notif_status_parked">Parked</string>
    <string name="main_title_polygon">, Polygon %s</string>
    <string name="dialog_parking_result">Parking result</string>
    <string name="dialog_parking_result_polygon">Polygon:</string>
    <string name="dialog_parking_result_time">Time:</string>
    <string name="dialog_parking_result_start_date">Start date:</string>
    <string name="dialog_parking_result_end_date">End date:</string>
    <string name="dialog_parking_result_ok">OK</string>
    <string name="main_polygon_id">Polygon %s</string>
</resources>
