<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_polygons"
            android:title="@string/menu_polygons" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
    </group>

    <item android:title="@string/nav_msg_others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
