<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_parking_result"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/colorBlack"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_parking_result_polygon"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="end"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="@string/dialog_parking_result_time"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="@string/dialog_parking_result_start_date"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="end"
            android:text="@string/dialog_parking_result_end_date"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/tv_polygon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="Alatoo, Polygon 0"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="36 hours"/>

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="12:00, 28 May, 2019"/>

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="00:00, 30 May, 2019"/>
    </GridLayout>

    <TextView
        android:id="@+id/tv_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_parking_result_ok"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_margin="8dp"/>
</LinearLayout>